# Ollin

./: .gitignore  CMakeLists.txt  README.md  run.ps1  test.ollin
env/: environment.yml
include/Macros/: token_types.h
include/OllinAPI/: Ollin.h  lexer.h
pre_src/: lexer.cpp  pre_Ollin.cpp
pre_src/lexer/: lexer.cpp
src/: Ollin.cpp
src/lexer/: lexer.cpp
